# moo

./: .gitattributes  .gitignore  .mise.toml  .synapseignore  ARCHITECTURE.md  DEPENDENCIES.md  README.md  RUN_I1_WINDOWS.cmd  VERIFY_I1_WINDOWS.ps1  beispiel.moo  pyproject.toml  test_3d_minimal.moo  test_3d_nolight.moo  test_alle_features.moo  test_import_bug2_main.moo  test_import_von_main.moo  test_kern.moo  test_mischmasch.moo  test_modul_main.moo  test_neue_features.moo  test_oop.moo  test_regex.moo  test_typwarn.moo  test_vector.moo
compiler/: Cargo.toml  build.rs
compiler/beispiele/: mini_interpreter.moo  mini_interpreter_v2.moo  test_bug1.moos  test_bug10.moos  test_bug11.moo  test_bug12.moo  test_bug13.moos  test_bug2.moo  test_bug3.moo  test_bug4.moos  test_bug5.moo  test_bug6.moo  test_bug7.moos  test_bug8.moos  test_bug9.moo  test_half1.moo  test_half1.moos  test_half2.moos  test_mi_head.moos  test_mi_single.moos  test_strcmp.moos  test_tok.moos  test_trycatch.moo  test_trycatch2.moo  test_trycatch3.moo  test_trycatch4.moo
compiler/runtime/: ki-gpu-smoke.sh  moo_3d.c  moo_3d_backend.h  moo_3d_gl21.c  moo_3d_gl33.c  moo_3d_gl33_mesh.c  moo_3d_gl33_mesh.h  moo_3d_gl33_shaders.h  moo_3d_math.c  moo_3d_math.h  moo_3d_terrain.c  moo_3d_terrain.h  moo_3d_vulkan.c  moo_3d_vulkan_frag_spv.h  moo_3d_vulkan_mem.c  moo_3d_vulkan_mem.h  moo_3d_vulkan_shaders.h  moo_3d_vulkan_sync.h  moo_3d_vulkan_vert_spv.h  moo_a11y_core.c  moo_a11y_win32.c  moo_a11y_win32.h  moo_aes_native.c  moo_audio.c  moo_autograd.c  moo_bare.c  moo_bare_alloc.c  moo_bare_boot.c  moo_bare_console.c  moo_bare_entry_arm64.c  moo_bare_gic_arm64.c  moo_bare_idt.c  moo_bare_kern.h  moo_bare_mmu_arm64.c  moo_bare_stackprot.c  moo_bare_timer_arm64.c  moo_capture.c  moo_capture_alsa.c  moo_capture_alsa_ops.h  moo_capture_audio_stub.c  (+143 more)
compiler/src/: ast.rs  boards.rs  codegen.rs  lexer.rs  main.rs  parser.rs  tokens.rs  (+1 more)
(+952 files in other folders)
