[package]
name = "moo-compiler"
version = "0.1.0"
edition = "2024"
description = "moo Compiler — erzeugt native Binaries über LLVM"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm18-1"] }
clap = { version = "4", features = ["derive"] }

[features]
default = ["gl33", "moo_ui", "vulkan"]
gl21 = []
gl33 = []
vulkan = []
# Cross-platform UI-Modul (Fenster, Widgets, Tray).
# Linux   → GTK3 + libappindicator3 (runtime/moo_ui_gtk.c + moo_tray_linux.c)
# Windows → Win32 (Phase 3)
# macOS   → Cocoa (Phase 4)
moo_ui = []

[build-dependencies]
cc = "1"
pkg-config = "0.3"
